--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 Materials
+ML Notes
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,jupyternotebooks
